# erwindb

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IndexPage.tsx  LICENSE-DATA.md  Makefile  README.md  ShowPage.tsx  db.ts  dist-workspace.toml  embeddings.ts  flake.nix  justfile  package-lock.json  package.json  paths.ts  scraper.ts  search.ts  tsconfig.json  tui.tsx  utils.tsx
.github/workflows/: build-test.yml  check.yml  release.yml
docs/: demo.cast  erwin-mode.cast  scraping.md  search.cast  semantic-search.cast
scraper/: embeddings.ts  scraper.ts  types.ts
scripts/: build.sh  download-models.sh  release
src/: app.rs  content.rs  db.rs  event.rs  highlight.rs  html.rs  main.rs
src/search/: fuzzy.rs  mod.rs  semantic.rs
src/ui/: index.rs  mod.rs  show.rs  styles.rs
