[package]
name = "erwindb"
version = "0.9.0"
edition = "2021"
description = "TUI for browsing Erwin Brandstetter's Stack Overflow Q&A"
license = "GPL-3.0-or-later"
repository = "https://github.com/ahacop/erwindb"
homepage = "https://github.com/ahacop/erwindb"
readme = "README.md"
authors = ["Ara Hacopian <ara@hacopian.de>"]
keywords = ["tui", "stackoverflow", "postgresql", "database", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"

# Fuzzy search
nucleo = "0.5"

# Syntax highlighting
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# HTML parsing
scraper = "0.21"
html2text = "0.14"

# Semantic search
fastembed = "4"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# Date formatting
chrono = "0.4"

# Open URLs in browser
open = "5.3"

# Error handling
anyhow = "1.0"

# Unicode width calculation
unicode-width = "0.2"

# Regex for HTML parsing
regex = "1.10"

# Lazy static initialization
once_cell = "1.19"

# Tree traversal for HTML
ego-tree = "0.9"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
